dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.58])
AC_INIT([echo++], [1.0], [berryzplus@gmail.com])
AC_CONFIG_SRCDIR([src/echo++.cxx])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CXX
AC_LANG(C++)
AC_CHECK_HEADERS([string.h iostream])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
